--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Real Life Mods</title>
-  <meta name="description" content="A totally serious, definitely real mod menu for real life. (Parody site)" />
+  <meta name="description" content="A really serious modding website." />
 
   <style>
     :root{
@@ -412,7 +412,7 @@
           <h2 class="title">Install mods. <span style="color:var(--accent)">In real life.</span> ⭐</h2>
           <p class="subtitle">
             Welcome to <b>Real Life Mods</b> — the modern mod menu for your daily NPC activities.
-            This is a <b>pretend</b> website made for real life. PLEASE attempt to “noclip” into the fridge at 3AM.
+            This is a <b>REAL</b> website made for real life. PLEASE attempt to “noclip” into the fridge at 3AM.
           </p>
 
           <div class="ctaRow">
