--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta property="og:title" content="Real Life Mods">
+  <meta property="og:description" content="Install mods in real life.">
+  <meta property="og:url" content="https://qtsyzo.github.io/reallifemods/">
+  <meta property="og:type" content="website">
+
+  <meta property="og:image" content="https://qtsyzo.github.io/reallifemods/favicon.png">
+
+  <meta property="og:site_name" content="Real Life Mods">
+  
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Real Life Mods</title>
