--- a/index.html
+++ b/index.html
@@ -482,10 +482,10 @@
             <b>Is this real?</b> Yes, Its very Real (Trust)
           </p>
           <p style="margin:0 0 10px; color:var(--muted); line-height:1.6;">
-            <b>What’s “Attestation Bypass” doing here?</b> It’s part of the joke list. This page does not provide instructions or tools.
+            <b>What’s “Attestation Bypass” doing here?</b> It is for bypassing Attestation, Illegal Method! (May Get Arrested).
           </p>
           <p style="margin:0; color:var(--muted); line-height:1.6;">
-            <b>Can I add more mods?</b> Yup — edit the <span class="kbd">mods</span> array in the script at the bottom.
+            <b>Are they all Standalone?</b> Yes, all our mods are <span class="kbd">STANDALONE</span> so please dont abuse.
           </p>
         </div>
       </section>
