--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
           <div class="logo" aria-hidden="true"></div>
           <div>
             <h1>Real Life Mods</h1>
-            <small>100% real • 0% liability • parody</small>
+            <small>100% real • 100% liability • 100% working</small>
           </div>
         </a>
 
