--- a/index.html
+++ b/index.html
@@ -507,6 +507,14 @@
         color: "green"
       },
       {
+        name: "Radiation Authentication",
+        badge: "NEW",
+        category: "illegal",
+        desc: "Jump into something radioactive to create an alt account.)",
+        tags: ["auth", "alt-account", "fun"],
+        color: "red"
+      },
+      {
         name: "Fly",
         badge: "HOT",
         category: "movement",
