--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
           <div class="panel">
             <h3 style="margin:0 0 8px; font-size:15px;">📦 Today’s “Added Mods”</h3>
             <p style="margin:0; color:var(--muted); font-size:13px; line-height:1.5;">
-              Tree Method • Fly • Attestation Bypass • Travis Scott Event Spawner (mod-sided) • Noclip • Thinking Method
+              Summon Travis Scott Concert • Radiation Auth
             </p>
           </div>
         </aside>
