--- a/index.html
+++ b/index.html
@@ -677,11 +677,12 @@
 
     function fakeInstall(){
       const msgs = [
-        "✅ Installed: Touch Grass Patch 🌿",
-        "🧠 Thinking Method enabled (temporary).",
-        "🚀 Fly unlocked (requires imagination).",
-        "⚠️ Noclip attempted… you bumped into a door anyway.",
-        "😂 Event Spawner loaded: living room concert mode."
+        "🌲 Tree Method enabled.",
+        "🧠 Thinking Method enabled.",
+        "🚀 Fly unlocked, Go as high as you can.",
+        "⚠️ Noclip Loaded, Try walking through a wall.",
+        "🕺 Event Spawner loaded: living room concert mode."
+        "🤢 Radiation Auth Activated."
       ];
       alert(msgs[Math.floor(Math.random() * msgs.length)]);
     }
