--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
         "🧠 Thinking Method enabled.",
         "🚀 Fly unlocked, Go as high as you can.",
         "⚠️ Noclip Loaded, Try walking through a wall.",
-        "🕺 Event Spawner loaded: living room concert mode."
+        "🕺 Event Spawner loaded: living room concert mode.",
         "🤢 Radiation Auth Activated."
       ];
       alert(msgs[Math.floor(Math.random() * msgs.length)]);
