--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
               <div class="chip" data-filter="movement">🏃 Movement</div>
               <div class="chip" data-filter="utility">🧰 Utility</div>
               <div class="chip" data-filter="meme">😂 Meme</div>
-              <div class="chip" data-filter="illegal">🚫 Definitely Not</div>
+              <div class="chip" data-filter="illegal">🚫 Illegal</div>
             </div>
 
             <div style="height:14px"></div>
@@ -677,12 +677,7 @@
 
     function fakeInstall(){
       const msgs = [
-        "🌲 Tree Method enabled.",
-        "🧠 Thinking Method enabled.",
-        "🚀 Fly unlocked, Go as high as you can.",
-        "⚠️ Noclip Loaded, Try walking through a wall.",
-        "🕺 Event Spawner loaded: living room concert mode.",
-        "🤢 Radiation Auth Activated."
+        "ALL MODS INSTALLED! PLEASE RUN INTO A WALL TO GET STARTED."
       ];
       alert(msgs[Math.floor(Math.random() * msgs.length)]);
     }
