--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
           <div class="panel">
             <h3 style="margin:0 0 8px; font-size:15px;">📦 Today’s “Added Mods”</h3>
             <p style="margin:0; color:var(--muted); font-size:13px; line-height:1.5;">
-              Summon Travis Scott Concert • Radiation Auth
+              Nothing Here Today!
             </p>
           </div>
         </aside>
