--- a/index.html
+++ b/index.html
@@ -644,8 +644,8 @@
       <footer>
         <div class="line"></div>
         <div class="tiny">
-          <div>© <span id="year"></span> Real Life Mods • Made by Syzo🌿</div>
-          <div>Made for Funnies • https://discord.gg/vrcheats</div>
+          <div>© <span id="year"></span> Real Life Mods • Made By Syzo🌿</div>
+          <div>Join The Server! • https://discord.gg/vrcheats</div>
         </div>
       </footer>
     </div>
