--- a/index.html
+++ b/index.html
@@ -573,13 +573,13 @@
           <h2 class="title">Install mods. <span style="color:var(--accent)">In real life.</span> ⭐</h2>
           <p class="subtitle">
             Welcome to <b>Real Life Mods</b> — the modern mod menu for your daily NPC activities.
-            This is a <b>REAL</b> website. PLEASE actually attempt something. 🤝
+            This is a <b>VERY</b> serious modding area. You get Real Life mods from this.
           </p>
 
           <div class="ctaRow">
             <a class="btn primary" href="#mods">🚀 View Mods</a>
             <a class="btn" href="#faq">🧠 FAQ</a>
-            <button class="btn danger" id="installAllBtn" type="button">⚠️ Install (All)</button>
+            <button class="btn danger" id="installAllBtn" type="button">⚠️ Install All</button>
           </div>
 
           <div class="kpi" aria-label="stats">
